<resources>
    <string name="app_name">ProyectMovil</string>

    <!--    registro usuarios-->
    <string name="registro_titulo">Crear Cuenta</string>
    <string name="registro_hint_nombre">Nombre</string>
    <string name="registro_hint_apellido">Apellido</string>
    <string name="registro_hint_codigo">Código de Estudiante</string>
    <string name="registro_hint_facultad">Facultad</string>
    <string name="registro_hint_usuario">Nombre de Usuario</string>
    <string name="registro_hint_contrasenia">Contraseña</string>
    <string name="registro_hint_confirmar_contrasenia">Confirmar Contraseña</string>
    <string name="registro_btn_registrar">Registrarse</string>
    <string name="registro_link_login">¿Ya tienes una cuenta? <b>Inicia Sesión</b></string>

    <!--    usuarios-->
    <string name="usuario_show_nombre">Nombre</string>
    <string name="usuario_show_usuario">nombre.usuario</string>
    <string name="usuario_btn_editar">Editar</string>
    <string name="usuario_btn_eliminar">Eliminar</string>
    <string name="usuario_btn_agregar">Agregar Usuario</string>
    <string name="usuario_btn_guardar_form">Guardar usuario</string>
    <string name="usuario_hint_contrasenia">Contraseña</string>
    <string name="usuario_hint_correo">Correo</string>
    <string name="usuario_hint_nombre">Nombre</string>
    <string name="usuario_opc_agregar">Guardar usuario</string>
    <string name="usuario_opc_editar">Actualizar usuario</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Cursos-->
    <string name="cursos_show_facultad">Facultad 1</string>
    <string name="cursos_show_nombre">Nombre</string>
    <string name="cursos_show_codigo">Código</string>
    <string name="cursos_hint_nombre">Nombre</string>
    <string name="cursos_hint_codigo">Código</string>
    <string name="cursos_opc_agregar">Agregar Curso</string>
    <string name="cursos_opc_editar">Modificar Curso</string>

    <string name="cursos_btn_agregar">Agregar Curso</string>
    <string name="cursos_btn_guardar_form">Guardar Curso</string>
    <!--    Botones-->
    <string name="btn_editar">Editar</string>
    <string name="btn_eliminar">Eliminar</string>

    <!--    Persona-->
    <string name="persona_show_facultad">Facultad 1</string>
    <string name="persona_show_codigo">Código</string>
    <string name="persona_show_nombre">Nombre</string>
    <string name="persona_show_apellido">Apellido</string>
    <string name="persona_hint_codigo">Código</string>
    <string name="persona_hint_nombre">Nombre</string>
    <string name="persona_hint_apellido">Apellido</string>
    <string name="persona_opc_agregar">Agregar Persona</string>
    <string name="persona_opc_editar">Modificar Persona</string>

    <string name="persona_btn_agregar">Agregar Persona</string>
    <string name="persona_btn_guardar_form">Guardar Persona</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!--    Asistencia-->
    <string name="asistencia_estado_text">Activa</string>
    <string name="asistencia_crear_nuevo_btn">Crear nueva asistencia</string>
    <string name="asistencia_icono_descripcion">Icono de asistencia</string>
    <string name="login_titulo">Bienvenido</string>
    <string name="login_mensaje">Inicia sesión para continuar</string>
    <string name="login_usuario_hint">Usuario</string>
    <string name="login_olvidar_contrasenia_text">¿Olvidaste tu contraseña?</string>
    <string name="login_sesion_btn">Iniciar Sesión</string>
    <string name="login_cuenta_text">¿No tienes una cuenta?</string>
    <string name="login_ir_a_registro_text">Regístrate</string>
    <string name="login_contrasenia_hint">Contraseña</string>

    <!--    Facultad-->
    <string name="facultad_show_codigo">Código</string>
    <string name="facultad_show_nombre">Nombre</string>
    <string name="facultad_hint_codigo">Código</string>
    <string name="facultad_hint_nombre">Nombre</string>
    <string name="facultad_opc_agregar">Agregar Facultad</string>
    <string name="facultad_opc_editar">Modificar Facultad</string>
    <string name="facultad_btn_agregar">Agregar Facultad</string>
    <string name="facultad_btn_guardar_form">Guardar Facultad</string>

</resources>