<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="6dp"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/txtTituloPersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="?attr/colorOnSurface"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/edtNuevoCodigoPersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:hint="@string/persona_hint_codigo"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edtNuevoNombrePersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:hint="@string/persona_hint_nombre"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edtNuevoApellidoPersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:hint="@string/persona_hint_apellido"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnGuardarPersona"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/persona_btn_guardar_form"
        android:textAllCaps="false"
        app:iconPadding="10dp"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>