<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:fillViewport="true"
    android:id="@+id/main"
    tools:context=".Activities.RegistroUsuario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="377dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/registro_titulo"
            android:textColor="?attr/colorPrimary"
            android:textSize="32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_nombre_registrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:hint="@string/registro_hint_nombre"
                app:startIconDrawable="@drawable/ic_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_nombre_registrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapWords"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_apellido_registrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:hint="@string/registro_hint_apellido">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_apellido_registrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textCapWords"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_codigo_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/registro_hint_codigo"
            app:startIconDrawable="@drawable/ic_codigo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_codigo_registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_facultad_registrar"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/registro_hint_facultad"
            app:startIconDrawable="@drawable/ic_school">

            <AutoCompleteTextView
                android:id="@+id/actv_facultad_registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="..."
                android:inputType="none"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/colorPrimary"
            android:alpha="0.2"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_usuario_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registro_hint_usuario"
            app:startIconDrawable="@drawable/ic_perfil">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_usuario_registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_contrasenia_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/registro_hint_contrasenia"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_contrasenia_registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_confirmar_contrasenia_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/registro_hint_confirmar_contrasenia"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_confirmar_contrasenia_registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:padding="14dp"
            android:text="@string/registro_btn_registrar"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_iniciar_sesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro_link_login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:textSize="14sp"/>

    </LinearLayout>
</ScrollView>